fixed spacing of contact form submit button

--- a/assets/sass/_small.scss
+++ b/assets/sass/_small.scss
@@ -247,8 +247,10 @@ body {
 			}
 
 			#submit {
+				margin-top: 8px;
+				padding: 2px 8px;
 				font-family: 'Roboto', 'Open Sans', sans-serif;
-				font-size: 14px;
+				font-size: 15px;
 			}
 		}
 	}
